apps/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: hp-elitedesk
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: ha-pvc
        - name: ha-lock
          emptyDir:
            medium: Memory
      containers:
        - image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: Always
          name: home-assistant
          resources:
            requests:
              cpu: 2
              memory: "3Gi"
            limits:
              cpu: 4
              memory: "6Gi"
          volumeMounts:
            - mountPath: "/config"
              name: ha-storage
            - mountPath: "/lock"
              name: ha-lock
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          # HACS is already installed on the PVC. To reinstall, exec into the pod:
          # wget -O - https://get.hacs.xyz | bash -
