apps/homeassistant/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-lb
  namespace: homeassistant
  annotations:
    metallb.universe.tf/address-pool: marc-local
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      name: http
  type: LoadBalancer
  loadBalancerIP: 192.168.178.130
